--- a/etc/dinit.d/config/late-filesystems.conf
+++ b/etc/dinit.d/config/late-filesystems.conf
@@ -1,3 +1,2 @@
-# Enter filesystems to be mounted after network is up
 LATE_FILESYSTEMS="nfs,nfs4,cifs,ceph,glusterfs,fuse.sshfs,davfs"
-
+WIREGUARD_DEP="yes"
